# pygame

./: .gitignore  README.md  check.py  code_test.py  main.py  main.spec  requirement.txt  requirement_dev.txt  setup.cfg  utils.py
src/: abstract_car.py  main.py  npc_car.py  play.py  player_car.py  pygame_img.py  utils.py
src/racing_game/: abstract_car.py  gameinfo.py  main.py  npc_car.py  play.py  player_car.py  pygame_img.py
test/: test_main.py
tests/test_racing/: test_main.py
